--- a/Plotting/first_try.ipynb
+++ b/Plotting/first_try.ipynb
@@ -12,7 +12,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#This is an iPython Notebook. This part is plain text.\n"
+      "This is an iPython Notebook. This part is plain text.\n"
      ],
      "language": "python",
      "metadata": {},
@@ -22,7 +22,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print \("I can put in Python code\")\n"
+      "print \"I can put in Python code\"\n"
      ],
      "language": "python",
      "metadata": {},
@@ -41,7 +41,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#And graphs:\n",
+      "And graphs:\n",
       "    "
      ],
      "language": "python",
