--- a/Plotting/first_try.ipynb
+++ b/Plotting/first_try.ipynb
@@ -12,7 +12,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "This is an iPython Notebook. This part is plain text.\n"
+      "#This is an iPython Notebook. This part is plain text.\n"
      ],
      "language": "python",
      "metadata": {},
