--- a/Plotting/first_try.ipynb
+++ b/Plotting/first_try.ipynb
@@ -41,7 +41,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "And graphs:\n",
+      "#And graphs:\n",
       "    "
      ],
      "language": "python",
