--- a/Plotting/first_try.ipynb
+++ b/Plotting/first_try.ipynb
@@ -22,7 +22,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print \"I can put in Python code\"\n"
+      "print (\"I can put in Python code\")\n"
      ],
      "language": "python",
      "metadata": {},
