--- a/Plotting/exercise.ipynb
+++ b/Plotting/exercise.ipynb
@@ -11,9 +11,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "#This is an iPython Notebook. This part is plain text.\n"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
