--- a/Plotting/exercise.ipynb
+++ b/Plotting/exercise.ipynb
@@ -19,20 +19,10 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "print (\"I can put in Python code\")\n"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "I can put in Python code\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "prompt_number": 1
     },
     {
