--- a/Plotting/split.ipynb
+++ b/Plotting/split.ipynb
@@ -12,7 +12,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-       "I am a boy".split(" ")"
+      "I am a boy".split(" ")\n"
      ],
      "language": "python",
      "metadata": {},
