--- a/Plotting/split.ipynb
+++ b/Plotting/split.ipynb
@@ -12,7 +12,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      ""I am a boy".split(" ")\n"
+      "#This is an iPython Notebook. This part is plain text.\n"
      ],
      "language": "python",
      "metadata": {},
