--- a/Plotting/split.ipynb
+++ b/Plotting/split.ipynb
@@ -12,21 +12,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import matplotlib.pyplot as plt\n",
-      "import numpy as np\n",
-      "\n",
-      "# Create x, randomly spaced between 0 to 20\n",
-      "x = np.linspace(0, 20, 1000)\n",
-      "y1 = np.sin(x)\n",
-      "y2 = np.cos(x)\n",
-      "# Plot the sin and cos functions\n",
-      "plt.plot(x , y1, \"-g\", label=\"sine\")\n",
-      "plt.plot(x , y2, \"-b\", label=\"cos\")\n",
-      "# The legend should be in the top right corner\n",
-      "plt.legend(loc=\"upper right\")\n",
-      "# Limit the y axis to -1.5 to 1.5\n",
-      "plt.ylim(-1.5, 1.5)\n",
-      "plt.show()\n"
+      "\"I am a boy\".split(" ")\n"
      ],
      "language": "python",
      "metadata": {},
